# PictoByteConverter

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
examples/python/: example.py
include/pictobyte/: BmpFormat.h  Logger.h  PictoByteAPI.h
python/: build_gui.py  pictobyte.py  pictobyte_gui.py  pictobyte_gui.spec  pyproject.toml
python/src/: library.py  packaging.py
python/src/gui/: __init__.py  app.py  delegates.py  formatting.py  models.py  qt.py  summaries.py  validation.py  widgets.py  window.py  workers.py
src/: API.cpp  Decoder.cpp  Encoder.cpp
src/headers/: BmpIO.h  Decoder.h  Encoder.h  ThreadPool.h
