[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictobyte-gui"
version = "0.1.0"
description = "PySide6 desktop GUI for PictoByteConverter."
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11",
]

[project.scripts]
pictobyte-gui = "gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["library", "packaging"]

[tool.setuptools.packages.find]
where = ["src"]
